Day03/labs/2. Manifest Files/kube-manifests/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-deployment
  template:
    metadata:
      labels:
        app: web-deployment 
    spec:
      containers:
        - name: web-app1
          image: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
